Fix wrapping at low screen sizes

--- a/style/main.scss
+++ b/style/main.scss
@@ -43,6 +43,7 @@ h6, .h6 {
   .list-group-item {
     border-width: 0;
     padding: 5px 10px;
+    white-space: nowrap;
     overflow: ellipsis;
   }
   a.list-group-item {
